# bemserver-api-client

./: .pre-commit-config.yaml  CHANGELOG.rst  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build-release.yaml  tests.yaml
bemserver_api_client/: __init__.py  client.py  enums.py  exceptions.py  request.py
bemserver_api_client/resources/: __init__.py  analysis.py  energy.py  structural_elements.py  timeseries.py  weather.py
requirements/: dev.txt  install.txt  tests.in  tests.txt
src/bemserver_api_client/: client.py  enums.py  request.py
src/bemserver_api_client/resources/: __init__.py  tasks.py  timeseries.py
tests/: conftest.py  test_client.py  test_enums.py  test_request.py  test_response.py  test_version.py
tests/resources/: test_events.py  test_resources_about.py  test_resources_analysis.py  test_resources_base.py  test_resources_campaigns.py  test_resources_energy.py  test_resources_events.py  test_resources_io.py  test_resources_notifications.py  test_resources_structural_elements.py  test_resources_tasks.py  test_resources_timeseries.py  test_resources_users.py  test_resources_weather.py
tests/resources/services/: test_resources_services_check_missing.py  test_resources_services_check_outlier.py  test_resources_services_cleanup.py  test_resources_services_download_weather.py
