[project]
name = "bemserver-api-client"
version = "0.22.0"
description = "BEMServer API client"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
  { name = "Jérôme Lafréchoux", email = "jlafrechoux@nobatek.com" },
  { name = "David Frédérique", email = "dfrederique@nobatek.com" },
]
maintainers = [
  { name = "Jérôme Lafréchoux", email = "jlafrechoux@nobatek.com" },
  { name = "David Frédérique", email = "dfrederique@nobatek.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.11"
dependencies = [
  "packaging>=25.0",
  "requests>=2.32.5,<3.0.0",
]

[project.urls]
Issues = "https://github.com/bemserver/bemserver-api-client/issues"
Source = "https://github.com/bemserver/bemserver-api-client"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
  "tests/",
  "CHANGELOG.rst",
  "tox.ini",
]

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "E",  # pycodestyle error
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "W",  # pycodestyle warning
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "testing", "third-party", "core", "api", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
testing = ["pytest"]
core = ["bemserver_core"]
api = ["bemserver_api"]

[tool.pytest.ini_options]
norecursedirs = ".git .tox docs env venv"
addopts = "-v --tb=short"
